--- a/workflow-templates/build.yml
+++ b/workflow-templates/build.yml
@@ -5,7 +5,7 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "hello world Job1!"
+      - run: echo "hello world Job1!!!"
       - uses: actions/checkout@v2
       - run: ls -alt
       - run: grep "Moq" hello.csproj
